Fix: One Liner - Prevent truncate url view #471

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -4292,6 +4292,7 @@
     }
 
     #navigator-toolbox {
+      position: relative;
       z-index: 2;
     }
 
@@ -4406,6 +4407,7 @@
       }
 
       #navigator-toolbox {
+        position: relative;
         z-index: 2;
       }
 
