--- a/src/tabbar/_one_liner.scss
+++ b/src/tabbar/_one_liner.scss
@@ -27,6 +27,7 @@
 }
 
 #navigator-toolbox {
+  position: relative;
   z-index: 2;
 }
 
